tests/invalid/impossible_comparison.php
<?php

$flag = true;

if ($flag === 5) {
    echo "never happens";
}

